HUE-6423 [editor] Fix the snippet database dropdown and jumpiness
(cherry picked from commit 5396d10d2f9e4839c3ff476a33ad199f922db29a)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -401,3 +401,21 @@ ul.errorlist {
     width: 130px;
   }
 }
+
+.hue-drop-down-active span {
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+.hue-drop-down-input {
+  width: 175px !important;
+  height: 12px !important;
+  margin-bottom: 0 !important;
+  padding-left: 4px !important;
+  padding: 1px !important;
+  font-size: 12px !important;
+  border: 1px solid rgba(0,0,0,0.2) !important;
+  border-radius: 2px !important;
+  box-shadow: none !important;
+  margin-left: -1px;
+}
